# gen-tonic-impls

./: Cargo.toml  rust-toolchain  smth.proto
src/: client.rs  ident.rs  lib.rs  server.rs
