[package]
name = "gen-tonic-impls"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
prost-build = "0.8"
prost-types = "0.8"
tonic-build = "0.5"
tempfile = "3"
prost = "0.8"
heck = "0.3"
itertools = "0.10"
proc-macro2 = "1.0.29"
quote = "1.0"
tremor-value = "0.3.2"
